dipole-20100817
+ last alignments with IMD

dipole-20100816
+ Option MONOPOLE renamed as COULOMB (adapted to IMD)
+ charge neutrality now provided

dipole-20100812
+ MONOPOLE and DIPOLE are now working with MPI

trunk-20100812
+ make endpot optional, is set to ${startpot}_end it not given
+ change i386 profile to i586
+ remove a few commented lines that are not necessary any more
+ set reasonable inital values for starting parameters
+ [APOT] add cbb potential to potfit and makeapot
+ add flagfile interruption to evo and remove unneeded variables
+ remove unneeded header files as well
+ adjust diff_evo parameters

trunk-20100810
+ strip even more (comments)

dipole-20100809
+ split option DIPOLE in MONOPOLE and DIPOLE, thereby MONOPOLE is implied by DIPOLE
+ uf (use forces) can now be used in connection with electrostatic forces
+ option FWEIGHT now works with options MONOPOLE and DIPOLE
+ all tail-functions are now evaluated without splines in order to have
  accurate derivations

devel-20100809
+ final commit before next release
+ evolutionary algorithm now restarts if average==best
+ fix Makefile for gcc profiles

dipole-20100804
+ Self energy terms added
+ all splines for electrostatic tail-functions are now evaluated once only
+ shifts changed from (r-r_cut) to 1/2*(r^2 - r_cut^2) (adapted to IMD)
+ output-file Dipol_Konvergenz_Verlauf is now available

devel-20100730
+ more optimization flags for icc and gcc
+ adjust comments to c-style
+ remove openmp
+ Makefile updated
+ [APOT] add support for ACML for analytic functions

dipole-20100729
+ last loop added for dipole calculation

dipole-20100729
+ tail of dipole potential -> all electrostatic potential-tails (five) implemented

devel-20100726
+ strip binaries
+ clean up Makefile, many old targets removed, 4 targets remaining
+ IMDSYS has been removed, set your system in the Makefile

trunk-20100726
+ [ADP] fix? force calculation
+ [APOT] fix punishments with invariant potentials

dipole-20100713